// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ToggleSwitch > Snapshot Tests > matches snapshot for toggleswitch as checked 1`] = `
<button
  aria-checked="true"
  aria-labelledby="_r_17_-flowbite-toggleswitch-label"
  class="group flex rounded-lg focus:outline-none cursor-pointer"
  id="_r_17_-flowbite-toggleswitch"
  role="switch"
  tabindex="0"
  type="button"
>
  <div
    class="relative rounded-full border after:absolute after:rounded-full after:bg-white after:transition-all after:translate-x-full after:border-white rtl:after:-translate-x-full border-surface-button bg-surface-button h-6 w-11 min-w-11 after:left-px after:top-px after:h-5 after:w-5 rtl:after:right-px"
    data-testid="flowbite-toggleswitch-toggle"
  />
</button>
`;

exports[`ToggleSwitch > Snapshot Tests > matches snapshot for toggleswitch as enabled when disabled is false 1`] = `
<button
  aria-checked="false"
  aria-labelledby="_r_1f_-flowbite-toggleswitch-label"
  class="group flex rounded-lg focus:outline-none cursor-pointer"
  id="_r_1f_-flowbite-toggleswitch"
  role="switch"
  tabindex="0"
  type="button"
>
  <div
    class="relative rounded-full border after:absolute after:rounded-full after:bg-white after:transition-all border-gray-200 bg-gray-200 dark:border-gray-600 dark:bg-gray-700 h-6 w-11 min-w-11 after:left-px after:top-px after:h-5 after:w-5 rtl:after:right-px"
    data-testid="flowbite-toggleswitch-toggle"
  />
</button>
`;

exports[`ToggleSwitch > Snapshot Tests > matches snapshot for toggleswitch with additional props 1`] = `
<button
  aria-checked="false"
  aria-label="Custom Toggle"
  aria-labelledby="_r_1q_-flowbite-toggleswitch-label"
  class="group flex rounded-lg focus:outline-none cursor-pointer"
  data-custom="value"
  id="_r_1q_-flowbite-toggleswitch"
  role="switch"
  tabindex="0"
  type="button"
>
  <div
    class="relative rounded-full border after:absolute after:rounded-full after:bg-white after:transition-all border-gray-200 bg-gray-200 dark:border-gray-600 dark:bg-gray-700 h-6 w-11 min-w-11 after:left-px after:top-px after:h-5 after:w-5 rtl:after:right-px"
    data-testid="flowbite-toggleswitch-toggle"
  />
</button>
`;

exports[`ToggleSwitch > Snapshot Tests > matches snapshot for toggleswitch with all props combined 1`] = `
<input
  checked=""
  class="sr-only"
  hidden=""
  name="combined-toggle"
  readonly=""
  type="checkbox"
/>
`;

exports[`ToggleSwitch > Snapshot Tests > matches snapshot for toggleswitch with color prop 1`] = `
<button
  aria-checked="false"
  aria-labelledby="_r_1c_-flowbite-toggleswitch-label"
  class="group flex rounded-lg focus:outline-none cursor-pointer"
  id="_r_1c_-flowbite-toggleswitch"
  role="switch"
  tabindex="0"
  type="button"
>
  <div
    class="relative rounded-full border after:absolute after:rounded-full after:bg-white after:transition-all border-gray-200 bg-gray-200 dark:border-gray-600 dark:bg-gray-700 h-6 w-11 min-w-11 after:left-px after:top-px after:h-5 after:w-5 rtl:after:right-px"
    data-testid="flowbite-toggleswitch-toggle"
  />
</button>
`;

exports[`ToggleSwitch > Snapshot Tests > matches snapshot for toggleswitch with custom className 1`] = `
<button
  aria-checked="false"
  aria-labelledby="_r_1a_-flowbite-toggleswitch-label"
  class="group flex rounded-lg focus:outline-none cursor-pointer custom-toggle-class"
  id="_r_1a_-flowbite-toggleswitch"
  role="switch"
  tabindex="0"
  type="button"
>
  <div
    class="relative rounded-full border after:absolute after:rounded-full after:bg-white after:transition-all border-gray-200 bg-gray-200 dark:border-gray-600 dark:bg-gray-700 h-6 w-11 min-w-11 after:left-px after:top-px after:h-5 after:w-5 rtl:after:right-px"
    data-testid="flowbite-toggleswitch-toggle"
  />
</button>
`;

exports[`ToggleSwitch > Snapshot Tests > matches snapshot for toggleswitch with custom id 1`] = `
<button
  aria-checked="false"
  aria-labelledby="_r_18_-flowbite-toggleswitch-label"
  class="group flex rounded-lg focus:outline-none cursor-pointer"
  id="custom-toggle-id"
  role="switch"
  tabindex="0"
  type="button"
>
  <div
    class="relative rounded-full border after:absolute after:rounded-full after:bg-white after:transition-all border-gray-200 bg-gray-200 dark:border-gray-600 dark:bg-gray-700 h-6 w-11 min-w-11 after:left-px after:top-px after:h-5 after:w-5 rtl:after:right-px"
    data-testid="flowbite-toggleswitch-toggle"
  />
</button>
`;

exports[`ToggleSwitch > Snapshot Tests > matches snapshot for toggleswitch with default color when color is undefined 1`] = `
<button
  aria-checked="false"
  aria-labelledby="_r_1d_-flowbite-toggleswitch-label"
  class="group flex rounded-lg focus:outline-none cursor-pointer"
  id="_r_1d_-flowbite-toggleswitch"
  role="switch"
  tabindex="0"
  type="button"
>
  <div
    class="relative rounded-full border after:absolute after:rounded-full after:bg-white after:transition-all border-gray-200 bg-gray-200 dark:border-gray-600 dark:bg-gray-700 h-6 w-11 min-w-11 after:left-px after:top-px after:h-5 after:w-5 rtl:after:right-px"
    data-testid="flowbite-toggleswitch-toggle"
  />
</button>
`;

exports[`ToggleSwitch > Snapshot Tests > matches snapshot for toggleswitch with default id when id is undefined 1`] = `
<button
  aria-checked="false"
  aria-labelledby="_r_19_-flowbite-toggleswitch-label"
  class="group flex rounded-lg focus:outline-none cursor-pointer"
  role="switch"
  tabindex="0"
  type="button"
>
  <div
    class="relative rounded-full border after:absolute after:rounded-full after:bg-white after:transition-all border-gray-200 bg-gray-200 dark:border-gray-600 dark:bg-gray-700 h-6 w-11 min-w-11 after:left-px after:top-px after:h-5 after:w-5 rtl:after:right-px"
    data-testid="flowbite-toggleswitch-toggle"
  />
</button>
`;

exports[`ToggleSwitch > Snapshot Tests > matches snapshot for toggleswitch with default props 1`] = `
<button
  aria-checked="false"
  aria-labelledby="_r_16_-flowbite-toggleswitch-label"
  class="group flex rounded-lg focus:outline-none cursor-pointer"
  id="_r_16_-flowbite-toggleswitch"
  role="switch"
  tabindex="0"
  type="button"
>
  <div
    class="relative rounded-full border after:absolute after:rounded-full after:bg-white after:transition-all border-gray-200 bg-gray-200 dark:border-gray-600 dark:bg-gray-700 h-6 w-11 min-w-11 after:left-px after:top-px after:h-5 after:w-5 rtl:after:right-px"
    data-testid="flowbite-toggleswitch-toggle"
  />
</button>
`;

exports[`ToggleSwitch > Snapshot Tests > matches snapshot for toggleswitch with different color values 1`] = `
<button
  aria-checked="false"
  aria-labelledby="_r_1t_-flowbite-toggleswitch-label"
  class="group flex rounded-lg focus:outline-none cursor-pointer"
  id="_r_1t_-flowbite-toggleswitch"
  role="switch"
  tabindex="0"
  type="button"
>
  <div
    class="relative rounded-full border after:absolute after:rounded-full after:bg-white after:transition-all border-gray-200 bg-gray-200 dark:border-gray-600 dark:bg-gray-700 h-6 w-11 min-w-11 after:left-px after:top-px after:h-5 after:w-5 rtl:after:right-px"
    data-testid="flowbite-toggleswitch-toggle"
  />
</button>
`;

exports[`ToggleSwitch > Snapshot Tests > matches snapshot for toggleswitch with different color values 2`] = `
<button
  aria-checked="false"
  aria-labelledby="_r_1u_-flowbite-toggleswitch-label"
  class="group flex rounded-lg focus:outline-none cursor-pointer"
  id="_r_1u_-flowbite-toggleswitch"
  role="switch"
  tabindex="0"
  type="button"
>
  <div
    class="relative rounded-full border after:absolute after:rounded-full after:bg-white after:transition-all border-gray-200 bg-gray-200 dark:border-gray-600 dark:bg-gray-700 h-6 w-11 min-w-11 after:left-px after:top-px after:h-5 after:w-5 rtl:after:right-px"
    data-testid="flowbite-toggleswitch-toggle"
  />
</button>
`;

exports[`ToggleSwitch > Snapshot Tests > matches snapshot for toggleswitch with different color values 3`] = `
<button
  aria-checked="false"
  aria-labelledby="_r_1v_-flowbite-toggleswitch-label"
  class="group flex rounded-lg focus:outline-none cursor-pointer"
  id="_r_1v_-flowbite-toggleswitch"
  role="switch"
  tabindex="0"
  type="button"
>
  <div
    class="relative rounded-full border after:absolute after:rounded-full after:bg-white after:transition-all border-gray-200 bg-gray-200 dark:border-gray-600 dark:bg-gray-700 h-6 w-11 min-w-11 after:left-px after:top-px after:h-5 after:w-5 rtl:after:right-px"
    data-testid="flowbite-toggleswitch-toggle"
  />
</button>
`;

exports[`ToggleSwitch > Snapshot Tests > matches snapshot for toggleswitch with different color values 4`] = `
<button
  aria-checked="false"
  aria-labelledby="_r_20_-flowbite-toggleswitch-label"
  class="group flex rounded-lg focus:outline-none cursor-pointer"
  id="_r_20_-flowbite-toggleswitch"
  role="switch"
  tabindex="0"
  type="button"
>
  <div
    class="relative rounded-full border after:absolute after:rounded-full after:bg-white after:transition-all border-gray-200 bg-gray-200 dark:border-gray-600 dark:bg-gray-700 h-6 w-11 min-w-11 after:left-px after:top-px after:h-5 after:w-5 rtl:after:right-px"
    data-testid="flowbite-toggleswitch-toggle"
  />
</button>
`;

exports[`ToggleSwitch > Snapshot Tests > matches snapshot for toggleswitch with different color values 5`] = `
<button
  aria-checked="false"
  aria-labelledby="_r_21_-flowbite-toggleswitch-label"
  class="group flex rounded-lg focus:outline-none cursor-pointer"
  id="_r_21_-flowbite-toggleswitch"
  role="switch"
  tabindex="0"
  type="button"
>
  <div
    class="relative rounded-full border after:absolute after:rounded-full after:bg-white after:transition-all border-gray-200 bg-gray-200 dark:border-gray-600 dark:bg-gray-700 h-6 w-11 min-w-11 after:left-px after:top-px after:h-5 after:w-5 rtl:after:right-px"
    data-testid="flowbite-toggleswitch-toggle"
  />
</button>
`;

exports[`ToggleSwitch > Snapshot Tests > matches snapshot for toggleswitch with different sizing values 1`] = `
<button
  aria-checked="false"
  aria-labelledby="_r_22_-flowbite-toggleswitch-label"
  class="group flex rounded-lg focus:outline-none cursor-pointer"
  id="_r_22_-flowbite-toggleswitch"
  role="switch"
  tabindex="0"
  type="button"
>
  <div
    class="relative rounded-full border after:absolute after:rounded-full after:bg-white after:transition-all border-gray-200 bg-gray-200 dark:border-gray-600 dark:bg-gray-700 h-5 w-9 min-w-9 after:left-px after:top-px after:h-4 after:w-4 rtl:after:right-px"
    data-testid="flowbite-toggleswitch-toggle"
  />
</button>
`;

exports[`ToggleSwitch > Snapshot Tests > matches snapshot for toggleswitch with different sizing values 2`] = `
<button
  aria-checked="false"
  aria-labelledby="_r_23_-flowbite-toggleswitch-label"
  class="group flex rounded-lg focus:outline-none cursor-pointer"
  id="_r_23_-flowbite-toggleswitch"
  role="switch"
  tabindex="0"
  type="button"
>
  <div
    class="relative rounded-full border after:absolute after:rounded-full after:bg-white after:transition-all border-gray-200 bg-gray-200 dark:border-gray-600 dark:bg-gray-700 h-6 w-11 min-w-11 after:left-px after:top-px after:h-5 after:w-5 rtl:after:right-px"
    data-testid="flowbite-toggleswitch-toggle"
  />
</button>
`;

exports[`ToggleSwitch > Snapshot Tests > matches snapshot for toggleswitch with different sizing values 3`] = `
<button
  aria-checked="false"
  aria-labelledby="_r_24_-flowbite-toggleswitch-label"
  class="group flex rounded-lg focus:outline-none cursor-pointer"
  id="_r_24_-flowbite-toggleswitch"
  role="switch"
  tabindex="0"
  type="button"
>
  <div
    class="relative rounded-full border after:absolute after:rounded-full after:bg-white after:transition-all border-gray-200 bg-gray-200 dark:border-gray-600 dark:bg-gray-700 h-7 w-14 min-w-14 after:left-1 after:top-0.5 after:h-6 after:w-6 rtl:after:right-1"
    data-testid="flowbite-toggleswitch-toggle"
  />
</button>
`;

exports[`ToggleSwitch > Snapshot Tests > matches snapshot for toggleswitch with disabled prop 1`] = `
<button
  aria-checked="false"
  aria-labelledby="_r_1e_-flowbite-toggleswitch-label"
  class="group flex rounded-lg focus:outline-none cursor-not-allowed opacity-50"
  disabled=""
  id="_r_1e_-flowbite-toggleswitch"
  role="switch"
  tabindex="0"
  type="button"
>
  <div
    class="relative rounded-full border after:absolute after:rounded-full after:bg-white after:transition-all border-gray-200 bg-gray-200 dark:border-gray-600 dark:bg-gray-700 h-6 w-11 min-w-11 after:left-px after:top-px after:h-5 after:w-5 rtl:after:right-px"
    data-testid="flowbite-toggleswitch-toggle"
  />
</button>
`;

exports[`ToggleSwitch > Snapshot Tests > matches snapshot for toggleswitch with empty string label 1`] = `
<button
  aria-checked="false"
  aria-labelledby="_r_1l_-flowbite-toggleswitch-label"
  class="group flex rounded-lg focus:outline-none cursor-pointer"
  id="_r_1l_-flowbite-toggleswitch"
  role="switch"
  tabindex="0"
  type="button"
>
  <div
    class="relative rounded-full border after:absolute after:rounded-full after:bg-white after:transition-all border-gray-200 bg-gray-200 dark:border-gray-600 dark:bg-gray-700 h-6 w-11 min-w-11 after:left-px after:top-px after:h-5 after:w-5 rtl:after:right-px"
    data-testid="flowbite-toggleswitch-toggle"
  />
</button>
`;

exports[`ToggleSwitch > Snapshot Tests > matches snapshot for toggleswitch with empty string name 1`] = `
<button
  aria-checked="false"
  aria-labelledby="_r_25_-flowbite-toggleswitch-label"
  class="group flex rounded-lg focus:outline-none cursor-pointer"
  id="_r_25_-flowbite-toggleswitch"
  role="switch"
  tabindex="0"
  type="button"
>
  <div
    class="relative rounded-full border after:absolute after:rounded-full after:bg-white after:transition-all border-gray-200 bg-gray-200 dark:border-gray-600 dark:bg-gray-700 h-6 w-11 min-w-11 after:left-px after:top-px after:h-5 after:w-5 rtl:after:right-px"
    data-testid="flowbite-toggleswitch-toggle"
  />
</button>
`;

exports[`ToggleSwitch > Snapshot Tests > matches snapshot for toggleswitch with empty string value 1`] = `
<button
  aria-checked="false"
  aria-labelledby="_r_26_-flowbite-toggleswitch-label"
  class="group flex rounded-lg focus:outline-none cursor-pointer"
  id="_r_26_-flowbite-toggleswitch"
  role="switch"
  tabindex="0"
  type="button"
  value=""
>
  <div
    class="relative rounded-full border after:absolute after:rounded-full after:bg-white after:transition-all border-gray-200 bg-gray-200 dark:border-gray-600 dark:bg-gray-700 h-6 w-11 min-w-11 after:left-px after:top-px after:h-5 after:w-5 rtl:after:right-px"
    data-testid="flowbite-toggleswitch-toggle"
  />
</button>
`;

exports[`ToggleSwitch > Snapshot Tests > matches snapshot for toggleswitch with label 1`] = `
<button
  aria-checked="false"
  aria-labelledby="_r_1i_-flowbite-toggleswitch-label"
  class="group flex rounded-lg focus:outline-none cursor-pointer"
  id="_r_1i_-flowbite-toggleswitch"
  role="switch"
  tabindex="0"
  type="button"
>
  <div
    class="relative rounded-full border after:absolute after:rounded-full after:bg-white after:transition-all border-gray-200 bg-gray-200 dark:border-gray-600 dark:bg-gray-700 h-6 w-11 min-w-11 after:left-px after:top-px after:h-5 after:w-5 rtl:after:right-px"
    data-testid="flowbite-toggleswitch-toggle"
  />
  <span
    class="ms-3 mt-0.5 text-start text-sm font-medium text-gray-900 dark:text-gray-300"
    data-testid="flowbite-toggleswitch-label"
    id="_r_1i_-flowbite-toggleswitch-label"
  >
    Toggle Label
  </span>
</button>
`;

exports[`ToggleSwitch > Snapshot Tests > matches snapshot for toggleswitch with label and custom id 1`] = `
<button
  aria-checked="false"
  aria-labelledby="_r_1j_-flowbite-toggleswitch-label"
  class="group flex rounded-lg focus:outline-none cursor-pointer"
  id="custom-id"
  role="switch"
  tabindex="0"
  type="button"
>
  <div
    class="relative rounded-full border after:absolute after:rounded-full after:bg-white after:transition-all border-gray-200 bg-gray-200 dark:border-gray-600 dark:bg-gray-700 h-6 w-11 min-w-11 after:left-px after:top-px after:h-5 after:w-5 rtl:after:right-px"
    data-testid="flowbite-toggleswitch-toggle"
  />
  <span
    class="ms-3 mt-0.5 text-start text-sm font-medium text-gray-900 dark:text-gray-300"
    data-testid="flowbite-toggleswitch-label"
    id="_r_1j_-flowbite-toggleswitch-label"
  >
    Custom Label
  </span>
</button>
`;

exports[`ToggleSwitch > Snapshot Tests > matches snapshot for toggleswitch with long label 1`] = `
<button
  aria-checked="false"
  aria-labelledby="_r_1o_-flowbite-toggleswitch-label"
  class="group flex rounded-lg focus:outline-none cursor-pointer"
  id="_r_1o_-flowbite-toggleswitch"
  role="switch"
  tabindex="0"
  type="button"
>
  <div
    class="relative rounded-full border after:absolute after:rounded-full after:bg-white after:transition-all border-gray-200 bg-gray-200 dark:border-gray-600 dark:bg-gray-700 h-6 w-11 min-w-11 after:left-px after:top-px after:h-5 after:w-5 rtl:after:right-px"
    data-testid="flowbite-toggleswitch-toggle"
  />
  <span
    class="ms-3 mt-0.5 text-start text-sm font-medium text-gray-900 dark:text-gray-300"
    data-testid="flowbite-toggleswitch-label"
    id="_r_1o_-flowbite-toggleswitch-label"
  >
    This is a very long label that should be rendered correctly within the toggle switch component.
  </span>
</button>
`;

exports[`ToggleSwitch > Snapshot Tests > matches snapshot for toggleswitch with name prop 1`] = `
<button
  aria-checked="false"
  aria-labelledby="_r_1g_-flowbite-toggleswitch-label"
  class="group flex rounded-lg focus:outline-none cursor-pointer"
  id="_r_1g_-flowbite-toggleswitch"
  role="switch"
  tabindex="0"
  type="button"
>
  <div
    class="relative rounded-full border after:absolute after:rounded-full after:bg-white after:transition-all border-gray-200 bg-gray-200 dark:border-gray-600 dark:bg-gray-700 h-6 w-11 min-w-11 after:left-px after:top-px after:h-5 after:w-5 rtl:after:right-px"
    data-testid="flowbite-toggleswitch-toggle"
  />
</button>
`;

exports[`ToggleSwitch > Snapshot Tests > matches snapshot for toggleswitch with null name 1`] = `
<button
  aria-checked="false"
  aria-labelledby="_r_27_-flowbite-toggleswitch-label"
  class="group flex rounded-lg focus:outline-none cursor-pointer"
  id="_r_27_-flowbite-toggleswitch"
  role="switch"
  tabindex="0"
  type="button"
>
  <div
    class="relative rounded-full border after:absolute after:rounded-full after:bg-white after:transition-all border-gray-200 bg-gray-200 dark:border-gray-600 dark:bg-gray-700 h-6 w-11 min-w-11 after:left-px after:top-px after:h-5 after:w-5 rtl:after:right-px"
    data-testid="flowbite-toggleswitch-toggle"
  />
</button>
`;

exports[`ToggleSwitch > Snapshot Tests > matches snapshot for toggleswitch with null value 1`] = `
<button
  aria-checked="false"
  aria-labelledby="_r_28_-flowbite-toggleswitch-label"
  class="group flex rounded-lg focus:outline-none cursor-pointer"
  id="_r_28_-flowbite-toggleswitch"
  role="switch"
  tabindex="0"
  type="button"
>
  <div
    class="relative rounded-full border after:absolute after:rounded-full after:bg-white after:transition-all border-gray-200 bg-gray-200 dark:border-gray-600 dark:bg-gray-700 h-6 w-11 min-w-11 after:left-px after:top-px after:h-5 after:w-5 rtl:after:right-px"
    data-testid="flowbite-toggleswitch-toggle"
  />
</button>
`;

exports[`ToggleSwitch > Snapshot Tests > matches snapshot for toggleswitch with onChange callback 1`] = `
<button
  aria-checked="false"
  aria-labelledby="_r_1p_-flowbite-toggleswitch-label"
  class="group flex rounded-lg focus:outline-none cursor-pointer"
  id="_r_1p_-flowbite-toggleswitch"
  role="switch"
  tabindex="0"
  type="button"
>
  <div
    class="relative rounded-full border after:absolute after:rounded-full after:bg-white after:transition-all border-gray-200 bg-gray-200 dark:border-gray-600 dark:bg-gray-700 h-6 w-11 min-w-11 after:left-px after:top-px after:h-5 after:w-5 rtl:after:right-px"
    data-testid="flowbite-toggleswitch-toggle"
  />
</button>
`;

exports[`ToggleSwitch > Snapshot Tests > matches snapshot for toggleswitch with sizing prop 1`] = `
<button
  aria-checked="false"
  aria-labelledby="_r_1b_-flowbite-toggleswitch-label"
  class="group flex rounded-lg focus:outline-none cursor-pointer"
  id="_r_1b_-flowbite-toggleswitch"
  role="switch"
  tabindex="0"
  type="button"
>
  <div
    class="relative rounded-full border after:absolute after:rounded-full after:bg-white after:transition-all border-gray-200 bg-gray-200 dark:border-gray-600 dark:bg-gray-700 h-5 w-9 min-w-9 after:left-px after:top-px after:h-4 after:w-4 rtl:after:right-px"
    data-testid="flowbite-toggleswitch-toggle"
  />
</button>
`;

exports[`ToggleSwitch > Snapshot Tests > matches snapshot for toggleswitch with special characters in label 1`] = `
<button
  aria-checked="false"
  aria-labelledby="_r_1m_-flowbite-toggleswitch-label"
  class="group flex rounded-lg focus:outline-none cursor-pointer"
  id="_r_1m_-flowbite-toggleswitch"
  role="switch"
  tabindex="0"
  type="button"
>
  <div
    class="relative rounded-full border after:absolute after:rounded-full after:bg-white after:transition-all border-gray-200 bg-gray-200 dark:border-gray-600 dark:bg-gray-700 h-6 w-11 min-w-11 after:left-px after:top-px after:h-5 after:w-5 rtl:after:right-px"
    data-testid="flowbite-toggleswitch-toggle"
  />
  <span
    class="ms-3 mt-0.5 text-start text-sm font-medium text-gray-900 dark:text-gray-300"
    data-testid="flowbite-toggleswitch-label"
    id="_r_1m_-flowbite-toggleswitch-label"
  >
    Special & Characters: &lt;&gt;&"'
  </span>
</button>
`;

exports[`ToggleSwitch > Snapshot Tests > matches snapshot for toggleswitch with style prop 1`] = `
<button
  aria-checked="false"
  aria-labelledby="_r_1r_-flowbite-toggleswitch-label"
  class="group flex rounded-lg focus:outline-none cursor-pointer"
  id="_r_1r_-flowbite-toggleswitch"
  role="switch"
  style="background-color: red; color: blue;"
  tabindex="0"
  type="button"
>
  <div
    class="relative rounded-full border after:absolute after:rounded-full after:bg-white after:transition-all border-gray-200 bg-gray-200 dark:border-gray-600 dark:bg-gray-700 h-6 w-11 min-w-11 after:left-px after:top-px after:h-5 after:w-5 rtl:after:right-px"
    data-testid="flowbite-toggleswitch-toggle"
  />
</button>
`;

exports[`ToggleSwitch > Snapshot Tests > matches snapshot for toggleswitch with undefined name 1`] = `
<button
  aria-checked="false"
  aria-labelledby="_r_29_-flowbite-toggleswitch-label"
  class="group flex rounded-lg focus:outline-none cursor-pointer"
  id="_r_29_-flowbite-toggleswitch"
  role="switch"
  tabindex="0"
  type="button"
>
  <div
    class="relative rounded-full border after:absolute after:rounded-full after:bg-white after:transition-all border-gray-200 bg-gray-200 dark:border-gray-600 dark:bg-gray-700 h-6 w-11 min-w-11 after:left-px after:top-px after:h-5 after:w-5 rtl:after:right-px"
    data-testid="flowbite-toggleswitch-toggle"
  />
</button>
`;

exports[`ToggleSwitch > Snapshot Tests > matches snapshot for toggleswitch with undefined value 1`] = `
<button
  aria-checked="false"
  aria-labelledby="_r_2a_-flowbite-toggleswitch-label"
  class="group flex rounded-lg focus:outline-none cursor-pointer"
  id="_r_2a_-flowbite-toggleswitch"
  role="switch"
  tabindex="0"
  type="button"
>
  <div
    class="relative rounded-full border after:absolute after:rounded-full after:bg-white after:transition-all border-gray-200 bg-gray-200 dark:border-gray-600 dark:bg-gray-700 h-6 w-11 min-w-11 after:left-px after:top-px after:h-5 after:w-5 rtl:after:right-px"
    data-testid="flowbite-toggleswitch-toggle"
  />
</button>
`;

exports[`ToggleSwitch > Snapshot Tests > matches snapshot for toggleswitch with unicode characters in label 1`] = `
<button
  aria-checked="false"
  aria-labelledby="_r_1n_-flowbite-toggleswitch-label"
  class="group flex rounded-lg focus:outline-none cursor-pointer"
  id="_r_1n_-flowbite-toggleswitch"
  role="switch"
  tabindex="0"
  type="button"
>
  <div
    class="relative rounded-full border after:absolute after:rounded-full after:bg-white after:transition-all border-gray-200 bg-gray-200 dark:border-gray-600 dark:bg-gray-700 h-6 w-11 min-w-11 after:left-px after:top-px after:h-5 after:w-5 rtl:after:right-px"
    data-testid="flowbite-toggleswitch-toggle"
  />
  <span
    class="ms-3 mt-0.5 text-start text-sm font-medium text-gray-900 dark:text-gray-300"
    data-testid="flowbite-toggleswitch-label"
    id="_r_1n_-flowbite-toggleswitch-label"
  >
    你好世界
  </span>
</button>
`;

exports[`ToggleSwitch > Snapshot Tests > matches snapshot for toggleswitch with value prop 1`] = `
<button
  aria-checked="false"
  aria-labelledby="_r_1h_-flowbite-toggleswitch-label"
  class="group flex rounded-lg focus:outline-none cursor-pointer"
  id="_r_1h_-flowbite-toggleswitch"
  role="switch"
  tabindex="0"
  type="button"
  value="toggle-value"
>
  <div
    class="relative rounded-full border after:absolute after:rounded-full after:bg-white after:transition-all border-gray-200 bg-gray-200 dark:border-gray-600 dark:bg-gray-700 h-6 w-11 min-w-11 after:left-px after:top-px after:h-5 after:w-5 rtl:after:right-px"
    data-testid="flowbite-toggleswitch-toggle"
  />
</button>
`;

exports[`ToggleSwitch > Snapshot Tests > matches snapshot for toggleswitch without label when label is not provided 1`] = `
<button
  aria-checked="false"
  aria-labelledby="_r_1k_-flowbite-toggleswitch-label"
  class="group flex rounded-lg focus:outline-none cursor-pointer"
  id="_r_1k_-flowbite-toggleswitch"
  role="switch"
  tabindex="0"
  type="button"
>
  <div
    class="relative rounded-full border after:absolute after:rounded-full after:bg-white after:transition-all border-gray-200 bg-gray-200 dark:border-gray-600 dark:bg-gray-700 h-6 w-11 min-w-11 after:left-px after:top-px after:h-5 after:w-5 rtl:after:right-px"
    data-testid="flowbite-toggleswitch-toggle"
  />
</button>
`;
